@@ -169,9 +169,7 @@ foreach my $cskey (keys %cservers) {
 	socksnd($cskey, "USER ".$cservers{$cskey}{'ident'}[0]." * * :".$cservers{$cskey}{'realname'}[0]) or
 		err(2, "Failed to connect to server: ".$cskey." [".$cservers{$cskey}{'host'}[0].":".$cservers{$cskey}{'port'}[0]."]", 0) 
 		and next;
-	socksnd($cskey, "NICK ".$cservers{$cskey}{'nick'}[0]) or
-		err(2, "Failed to connect to server: ".$cskey." [".$cservers{$cskey}{'host'}[0].":".$cservers{$cskey}{'port'}[0]."]", 0) 
-		and next;
+	API::IRC::nick($cskey, $cservers{$cskey}{'nick'}[0]);
 	# Create the process.
 	$SOCKPROC{$cskey} = Async->new(sub {
 		# Infinite loop.
